# santa-game

./: .gitignore  Cargo.toml
assets/: bindings_config.ron  display_config.ron  entities.ron  events.ron  levels.ron
assets/texture/: background_indoors.xcf  background_outside_spritesheet.ron  background_outside_spritesheet.xcf  ground_spritesheet.ron  ground_spritesheet.xcf  santa_spritesheet.ron  santa_spritesheet.xcf  snowflake_spritesheet.ron  snowflake_spritesheet.xcf
assets/ui/: dialogue.ron
src/: assets.rs  camera.rs  dialogue.rs  levels.rs  main.rs  physics.rs  player.rs  render.rs  snowflakes.rs
