[package]
name = "santa-game"
version = "0.1.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.5", features = ["vorbis"]}
rand = "0.8"
ron = "0.6"
serde = "1"
serde_derive = "1"
noise = "0.7"
simplelog = "0.10"
log = "0.4"